update file names and fix typos in help page

--- a/RoboToDo.roboFontExt/html/index.html
+++ b/RoboToDo.roboFontExt/html/index.html
@@ -22,7 +22,7 @@ body {
 
 <p>When the To-Do manager is open, click on the &ldquo;+&rdquo; to create a new To-Do. Double click on a To-Do to edit the To-Do text. Click the check box to complete a To-Do.</P>
 
-<p>All data is stored in the .ufo font info and glyph info fields. RoBoTodo tries to keep its data seperate from anything that might already be entered in these fields.</p>
+<p>All data is stored in the .ufo font info and glyph info fields. RoboToDo tries to keep its data seperate from anything that might already be entered in these fields.</p>
 
 </body>
 </html>
